styles.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
html {
	--color-1: rgb(255, 255, 255);
	--color-2: rgb(0, 0, 0);
	--color-3: rgb(120, 120, 120);
	--color-4: rgb(200, 200, 200);
}
header {
	position: relative;
	height: 100vh;
	width: 100%;
	background-image: url("img/athlete-bike-black-and-white-cycle-260409.jpg");
	background-size: cover;
	background-repeat: no-repeat;
	display: flex;
	justify-content: center;
	align-items: center;
}
.desktop-nav {
	position: absolute;
	width: 100%;
	display: flex;
	justify-content: space-between;
	align-items: center;
	top: 0;
	left: 0;
	height: 5rem;
}
.desktop-nav ul {
	display: flex;
	margin-right: 5rem;
}
.desktop-nav ul a {
	color: var(--color-1);
	text-decoration: none;
	text-transform: uppercase;
	padding: 0.5rem 1rem;
}
.logo {
	color: var(--color-1);
	font-family: "Permanent Marker", sans-serif;
	font-size: 1.5rem;
	text-transform: uppercase;
	margin-left: 6rem;
}

header h1 {
	color: var(--color-1);
	font-size: 4.5rem;
	text-transform: uppercase;
	text-align: center;
	font-family: "roboto", sans-serif;
	letter-spacing: 8px;
}
#mobile-nav {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: var(--color-2);
	flex-direction: column;
	align-items: center;
	display: none;
}

#mobile-nav ul {
	display: flex;
	flex-direction: column;
	margin-top: 3rem;
}
#mobile-nav ul a {
	display: block;
	color: var(--color-1);
	text-decoration: none;
	text-transform: uppercase;
	font-size: 1.5rem;
	padding: 2rem 2rem;
}

#mobile-nav li {
	list-style: none;
}
ul a:hover,
#mobile-nav ul a:hover {
	text-decoration: underline;
}
#mobile-nav:target {
	display: flex;
}
.burger-btn {
	position: fixed;
	top: 0;
	right: 0;
	margin: 1.5rem 2rem;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
	width: 3rem;
	height: 2rem;
	display: none;
}
.burger-btn span {
	display: block;
	background-color: #fff;
	box-shadow: 0 5px 0px black;
	width: 100%;
	height: 3px;
}
#mobile-nav .burger-btn {
	display: flex;
}

/* S E C T I O N   T R A I N E R S */
.trainers {
	padding-bottom: 5rem;
}
.trainers .container {
	background-color: var(--color-1);
	margin-top: 60px;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	align-items: center;
}
h2 {
	text-align: center;
	font-size: var(--color-2);
	font-family: "roboto", sans-serif;
	text-transform: uppercase;
	font-size: 3rem;
	margin: 60px auto 0;
}
.trainer {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	margin-bottom: 2rem;
}
.trainer h3 {
	text-transform: uppercase;
	font-size: 1.5rem;
	font-family: "roboto", sans-serif;
	text-align: left;
	margin-top: 1rem;
}
.trainer p {
	font-family: "open-sans", sans-serif;
	margin: 1.5rem 0;
	color: var(--color-3);
}
.trainer a {
	color: var(--color-1);
	padding: 0.5rem 1.5rem;
	background-color: var(--color-2);
	text-decoration: none;
	font-family: "roboto", sans-serif;
}
.trainers img {
	width: 400px;
	height: 400px;
	object-fit: cover;
	object-position: center;
}

.trainer .img {
	margin: 0 auto;
}
.text-wrapper {
	width: 500px;
	text-align: center;
	padding: 0 50px;
}

.membership {
	background-image: url("img/image_boxer.jpg");
	background-size: cover;
	color: var(--color-1);
}
.membership .container {
	max-width: 1200px;
	margin: 0 auto;
}
.membership h2 {
	padding: 3rem 3rem;
	text-align: left;
}
.membership p {
	font-family: "open-sans", sans-serif;
	letter-spacing: 1px;
	font-size: 1rem;
	line-height: 1.6;
}
.m_text-wrapper {
	display: flex;
	width: 60%;
	margin: 2rem 0 1rem 6rem;
}
.m_text-wrapper span {
	font-size: 4rem;
	margin-right: 2.5rem;
}
.membership a {
	display: inline-block;
	padding: 0.75rem 1.75rem;
	margin: 2rem 0 3rem 3rem;
	text-transform: uppercase;
	text-decoration: none;
	font-size: 1rem;
	font-family: "roboto", sans-serif;
	color: var(--color-2);
	background-color: var(--color-1);
}
.about-us {
	display: flex;
}
.about-us > * {
	min-width: 200px;
	height: 80vh;
	max-height: 600px;
}
.about-us .img {
	flex: 1 1 35%;
	display: flex;
	justify-content: center;
	align-items: center;
}
.about-us .description-wrapper {
	width: 90%;
	margin: auto;
}
.about-us .description {
	flex: 1 2 50%;
	color: var(--color-1);
	background-color: var(--color-2);
}
.about-us strong {
	display: block;
	font-family: "open-sans", sans-serif;
	font-weight: 400;
	text-transform: uppercase;
	font-size: 1.25rem;
	padding-top: 7rem;
}
.about-us h2 {
	font-family: "roboto", sans-serif;
	font-size: 3rem;
	text-align: left;
	margin: 1rem 0;
}
.about-us p {
	font-family: "open-sans", sans-serif;
	line-height: 1.6;
}
.about-us .one {
	flex: 1 1 15%;
}
.about-us img {
	width: 60%;
	height: 65%;
	min-width: 270px;
	object-fit: cover;
	object-position: 70%;
}
.one {
	color: var(color-2);
	font-family: "roboto", sans-serif;
	font-size: 4.5rem;
	font-weight: bold;
	padding: 8rem 0 0 1.5rem;
}
.opinion{
	height: 80vh;
	background-image: url(img/pexels-photo-3688303.jpeg);
	background-position: 25% 47%;
}
.opinion .wrapper{
	display:flex;
	flex-direction: column;
	width:700px;
	padding:5rem 0 1rem 8rem;
	color:var(--color-1);
}
.opinion  h2{
	margin: 0 0 4rem 0;
	text-align: left;
	position:relative;

}
.opinion h2::before{
	content:'"';
	font-family:'news cycle';
	font-size: 40rem;
	line-height: 0.8;
	position:absolute;
	top:0.1rem;
	opacity:0.5;
}
.opinion p{
font-family: 'roboto',sans-serif;
font-size: 1.5rem;
line-height: 1.6;
font-weight: 300;
}
.opinion p::after{
	content:"Nick Cave";
	font-family: 'roboto', sans-serif;
	font-weight: bold;
	display:block;
	font-size: 1.25rem;
	padding:1rem 0;
}
.opinion a{
	text-transform: capitalize;
	color:var(--color-1);
	text-decoration: none;
	font-size: 1.5rem;
	font-family: 'roboto',sans-serif;
	border:2px solid var(--color-1);
	display:block;
	position: relative;
	width:fit-content;
	font-weight: bold;;
	padding: 1rem 2rem;
	

}

